--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="log_pass_vault_bot" data-size="large" data-radius="5" data-request-access="write"></script>
   </body>
 </html>
