--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="tg_auth_login_test_bot" data-size="large" data-radius="5" data-request-access="write"></script>
     <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="log_pass_vault_bot" data-size="large" data-radius="5" data-request-access="write"></script>
   </body>
 </html>
